--- a/css/webDevBoot-15-150.css
+++ b/css/webDevBoot-15-150.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+    font-family: 'Montserrat', sans-serif;
     height: 100%;
     margin: 0;
     background-repeat: no-repeat;
