ver 2 of YelpCamp complete

--- a/YelpCamp/ver2/views/landing.ejs
+++ b/YelpCamp/ver2/views/landing.ejs
@@ -2,6 +2,6 @@
     <div class="container">
         <h1>Welcome to YelpCamp!</h1>
         <h3>ver2</h3>
-        <a href="/index">Visit campgrounds</a>
+        <a href="/campgrounds">Visit campgrounds</a>
     </div>
 <% include partials/footer.ejs %>
