--- a/YelpCamp/ver2/views/new-campgrounds.ejs
+++ b/YelpCamp/ver2/views/new-campgrounds.ejs
@@ -17,7 +17,7 @@
                         <input class="btn btn-primary btn-lg btn-block" type="submit" value="Submit">
                     </div>
                 </form>
-                <a href="/index">Return to campgrounds</a>
+                <a href="/campgrounds">Return to campgrounds</a>
             </div>
         </div>
     </div>
