--- a/blog-demo/views/edit.ejs
+++ b/blog-demo/views/edit.ejs
@@ -1,21 +1,27 @@
-<% include partials/header.ejs %>
-
-    <h1>Edit blog</h1>
-
-    <form action="/blog-entries/<%= blog._id %>" method="put"> <!--this is not right-->
-        <div>
-            <input type="text" name="title" value="<%= blog.title %>">
+<% include ./partials/header.ejs %>
+    <div class="ui main text container segment">
+        <div class="ui huge header">Edit [<%=blog.title%>]
         </div>
-        <div>
-            <textarea name="message" rows="20" cols="100"><%= blog.message %></textarea>
-        </div>
-        <div>
-            <input type="text" name="image" value="<%= blog.image %>">
-        </div>
-        <div>
-            <input type="submit" value="Submit">
-        </div>
-    </form>
-    <a href="/blog-entries">Back to blogs</a>
-
-<% include partials/footer.ejs %>
+        <form class="ui form" action="/blog-entries/<%=blog._id%>?_method=PUT" method="post">
+            <!--this is not right-->
+            <div class="field">
+                <label>Title</label>
+                <input type="text" name="blog[title]" value="<%= blog.title %>">
+            </div>
+            <div class="field">
+                <label>Message</label>
+                <textarea name="blog[message]" rows="20" cols="100">
+                    <%= blog.message %>
+                </textarea>
+            </div>
+            <div class="field">
+                <label>Image URL</label>
+                <input type="text" name="blog[image]" value="<%= blog.image %>">
+            </div>
+            <div class="field">
+                <input class="ui basic blue button" type="submit" value="Save">
+                <a class="ui basic button" href="/blog-entries">Back to blogs</a>
+            </div>
+        </form>
+    </div>
+    <% include ./partials/footer.ejs %>
