--- a/blog-demo/views/partials/header.ejs
+++ b/blog-demo/views/partials/header.ejs
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
 </head>
 
 <body>
