--- a/blog-demo/views/show.ejs
+++ b/blog-demo/views/show.ejs
@@ -1,19 +1,23 @@
-<% include partials/header.ejs %>
+<% include ./partials/header.ejs %>
 
-<div>
-    <div>
-        <h1><%= blog.title; %></h1>
+    <div class="ui main text container segment">
+        <div class="ui huge header">
+            <%= blog.title; %>
+        </div>
+        <div>
+            <image class="ui centered bordered rounded medium image" src='<%= blog.image; %>'>
+        </div>
+        <div class="ui content">
+            <!-- the minus sign used after the percent sign allows html to be processed but also must be sanitized -->
+            <%- blog.message; %>
+        </div>
+        <div class="ui items">
+            <a class="ui basic tiny blue button" href="/blog-entries">Return</a>
+            <a class="ui basic tiny green button" href="/blog-entries/<%= blog._id %>/edit">Edit</a>
+            <a class="ui basic tiny orange button" href="#">Soft delete</a>
+            <form id="delete-form" action="/blog-entries/<%=blog._id%>?_method=DELETE" method="POST">
+                <button class="ui basic tiny red button">Hard Delete</button>
+            </form>
+        </div>
     </div>
-    <div>
-        <image src='<%= blog.image; %>'>
-    </div>
-    <div>
-        <%= blog.message; %>
-    </div>
-</div>
-<a href="/blog-entries">Return</a>
-<a href="/blog-entries/<%= blog._id %>/edit">Edit</a>
-<a href="#">Soft delete</a>
-<a href="#">Hard delete</a>
-    
-<% include partials/footer.ejs %>
+    <% include ./partials/footer.ejs %>
