progress made on comments

--- a/YelpCamp/ver3/views/campgrounds/index.ejs
+++ b/YelpCamp/ver3/views/campgrounds/index.ejs
@@ -1,5 +1,4 @@
-<% include partials/header.ejs %>
-
+<% include ../partials/header.ejs %>
     <div class="container">
         <header class="jumbotron">
             <div class="container">
@@ -19,8 +18,7 @@
                         <a class="btn btn-info btn-xs" href="/campgrounds/<%= campground['_id'] %>" role="button">See details</a>
                     </div>
                 </div>
-            <% }); %>
+                <% }); %>
         </div>
     </div>
-
-<% include partials/footer.ejs %>
+<% include ../partials/footer.ejs %>
