--- a/YelpCamp/ver3/views/campgrounds/new.ejs
+++ b/YelpCamp/ver3/views/campgrounds/new.ejs
@@ -1,17 +1,17 @@
-<% include partials/header.ejs %>
+<% include ../partials/header.ejs %>
     <div class="container">
         <div class="row">
             <h1 class="text-center">Create a new campground</h1>
             <div class="yelpcamp-form-center">
                 <form action="/campgrounds" method="POST">
                     <div class="form-group">
-                        <input class="form-control" type="text" name="location" placeholder="enter campground name...">
+                        <input class="form-control" type="text" name="campground[name]" placeholder="enter campground name...">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="imageUrl" placeholder="enter image URL...">
+                        <input class="form-control" type="text" name="campground[image]" placeholder="enter image URL...">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="description" placeholder="enter description...">
+                        <input class="form-control" type="text" name="campground[description]" placeholder="enter description...">
                     </div>
                     <div class="form-group">
                         <input class="btn btn-primary btn-lg btn-block" type="submit" value="Submit">
@@ -21,4 +21,4 @@
             </div>
         </div>
     </div>
-<% include partials/footer.ejs %>
+<% include ../partials/footer.ejs %>
