--- a/YelpCamp/ver3/views/campgrounds/show.ejs
+++ b/YelpCamp/ver3/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<% include partials/header.ejs %>
+<% include ../partials/header.ejs %>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -19,4 +19,4 @@
             </div>
         </div>
     </div>
-<% include partials/footer.ejs %>
+<% include ../partials/footer.ejs %>
