--- a/YelpCamp/ver3/views/campgrounds/index.ejs
+++ b/YelpCamp/ver3/views/campgrounds/index.ejs
@@ -7,7 +7,7 @@
                 <a class="btn btn-primary btn-large" href="/campgrounds/new">Add a new campground</a>
             </div>
         </header>
-        <div class="row text-center yelpcamp-wrap">
+        <div class="row text-center" style="display: flex; flex-wrap: wrap;">
             <% campgrounds.forEach( function (campground) { %>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="thumbnail">
@@ -18,7 +18,7 @@
                         <a class="btn btn-info btn-xs" href="/campgrounds/<%= campground['_id'] %>" role="button">See details</a>
                     </div>
                 </div>
-                <% }); %>
+            <% }); %>
         </div>
     </div>
 <% include ../partials/footer.ejs %>
