--- a/YelpCamp/ver3/views/campgrounds/new.ejs
+++ b/YelpCamp/ver3/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <h1 class="text-center">Create a new campground</h1>
-            <div class="yelpcamp-form-center">
+            <div class="col-md-4 col-md-offset-4">
                 <form action="/campgrounds" method="POST">
                     <div class="form-group">
                         <input class="form-control" type="text" name="campground[name]" placeholder="enter campground name...">
