--- a/YelpCamp/ver3/views/campgrounds/show.ejs
+++ b/YelpCamp/ver3/views/campgrounds/show.ejs
@@ -1,21 +1,41 @@
 <% include ../partials/header.ejs %>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <img class="img-responsive center-block img-thumbnail" src="<%= campground.image %>" alt="image for <%= campground.name %>">
+            <div class="col-md-3">
+                <p class="lead">YelpCamp</p>
+                <div class="list-group">
+                    <li class="list-group-item active">Info 1</li>
+                    <li class="list-group-item">Info 2</li>
+                    <li class="list-group-item">Info 3</li>
+                </div>
+                <p>Google Map will go here!</p>
             </div>
-            <div class="text-center page-header col-md-12">
-                <h1><%= campground.name %> <small>campground details</small></h1>
-            </div>
-            <div class="well col-md-8 col-md-offset-2">
-                <p><%= campground.description %></p>
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                <h4>comments:</h4>
-                <% campground.comments.forEach( function (comment) { %>
-                    <p><em>"<%= comment.text %>"</em></p>
-                    <p class="text-right">&mdash; <strong><%= comment.author %></strong></p>
-                <% }); %>
+            <div class="col-md-9">
+                <div class="thumbnail">
+                    <img class="img-responsive center-block img-thumbnail" src="<%= campground.image %>" alt="image for <%= campground.name %>">
+                    <div class="caption-full">
+                        <h4 class="pull-right">$9.00/night</h4>
+                        <h4><a><%= campground.name %></a></h4>
+                        <p><%= campground.description %></p>
+                    </div>
+                </div>
+                <div class="well">
+                    <div class="text-right">
+                        <p><a class="btn btn-success" href="/campgrounds/<%=campground._id%>/comments/new">Leave Review</a></p>
+                    </div>
+                    <hr>
+                    <% campground.comments.forEach(function (comment) { %>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <strong><%= comment.author %></strong>
+                                <span class="pull-right">10 days ago</span>
+                                <p>
+                                    <em>"<%= comment.text %>"</em>
+                                </p>
+                            </div>
+                        </div>
+                    <%}) %>
+                </div>
             </div>
         </div>
     </div>
