--- a/YelpCamp/ver3/views/comments/new.ejs
+++ b/YelpCamp/ver3/views/comments/new.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <h1 class="text-center">Add new comment to <%=campground.name%></h1>
-            <div class="yelpcamp-form-center">
+            <div class="col-md-4 col-md-offset-4">
                 <form action="/campgrounds/<%=campground._id%>/comments" method="POST">
                     <div class="form-group">
                         <input class="form-control" type="text" name="comment[text]" placeholder="enter comment here...">
