--- a/auth/views/secret.ejs
+++ b/auth/views/secret.ejs
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-
-
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>secret page</title>
-</head>
-
-<body>
+<% include ./partials/header.ejs %>
     <h1>You have reached the secret page</h1>
-    <img src="https://media.giphy.com/media/UwSoH9niSpvZC/giphy.gif" alt="Can you feel it!" height="300">
-</body>
-
-</html>
+    <img src="http://stream1.gifsoup.com/view7/3753977/kramer-mickey-o.gif" alt="Kramer and Mickey in style" height="300">
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/register">Sign Up!</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/logout">Logout</a></li>
+    </ul>
+<% include ./partials/footer.ejs %>
